--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
         <div class="container">
             <h1>Tic Tac Toe</h1>
             <h3 id="game_id"></h3>
+            <h3 id="user_info"></h3>
             <div id="board" class="board">
                 <div class="cell" id="0-0"></div>
                 <div class="cell" id="0-1"></div>
